# CADExchangerTestTask

./: CMakeLists.txt  Geometry.hpp  README.md  build.sh  circle.cpp  circle.hpp  ellipse.cpp  ellipse.hpp  geometricShape.cpp  geometricShape.hpp  helix.cpp  helix.hpp  main.cpp
